fix spacing inside border-images blocks

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -195,6 +195,10 @@ main img, main video
 .border-images img
   border: 1px solid $fg-dim
 
+.border-images > p,
+.border-images > .footnote-definition
+  padding: 0 .5rem
+
 table
   // border-spacing: 2rem 1rem
   text-align: left
